# subconscious.asisaga.com

./: .funcignore  .gitignore  README.md  azure.yaml  errors.md  function_app.py  local.settings.json  logging_config.py  pyproject.toml  requirements.txt
.github/scripts/: get_kv_client_id.py  resolve_function_app.py
.github/specs/: mvp.md
.github/workflows/: README.md  ci.yml  deploy.yml
blueprints/: __init__.py  data.py  homepage.py  mcp_endpoint.py  views.py
data/conversations/: demo-product-review-q1.json  demo-risk-assessment-q2.json  demo-strategy-2024.json
data/schema_contexts/: buddhi-ceo.json  buddhi-cso.json  manas-ceo.json
mind/: Readme.md  roles.md
mind/ceo/: Readme.md
mind/cfo/: Readme.md
mind/chro/: Readme.md
mind/cmo/: Readme.md
mind/collective/: boardroom.jsonld  business-infinity.jsonld  (+4 more)
models/: __init__.py  conversation_page.py  message.py  message_input.py  orchestration.py  schema_context_record.py  schema_entry.py
planner/: __init__.py  client.py  responsibilities.py  sync.py  tasks.py
pr/: Readme.md
schemas/: integrity.context.jsonld  integrity.schema.json  responsibilities.schema.json
server/: __init__.py  prompts.py  resources.py  tools.py
src/: local.settings.json  pyproject.toml  requirements.txt
storage/: __init__.py  schemas.py
subconscious/: __init__.py  app.py  deploy.py  models.py  schema_storage.py  server.py  storage.py  templates.py
templates/: __init__.py  app.html  conversations.html  monitor.html
tests/: conftest.py  test_app.py  test_function_app.py  test_models.py  test_planner_tasks.py  test_schema_storage.py  test_server.py  test_storage.py  test_templates.py
(+115 files in other folders)
