[project]
name = "mcp-asisaga-com"
version = "0.1.0"
dependencies = [
    "azure-functions",
    "jsonrpcserver",
    "requests",
    "python-dotenv",
    "fnmatch"
]
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"
lint.select = ["E", "F", "I", "UP", "A"]
lint.ignore = ["D203"]
