[project]
name = "mcp-asisaga-com"
version = "0.1.0"
dependencies = [
    "azure-functions",
    "fastmcp>=3.0",
    "azure-data-tables",
    "azure-identity",
    "azure-mgmt-resource>=23.0,<25",
]
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"
lint.select = ["E", "F", "I", "UP", "A"]
lint.ignore = ["D203"]
