[project]
name = "subconscious-asisaga-com"
version = "2.0.0"
description = "Multi-agent conversation persistence and schema context MCP server on Azure Functions"
requires-python = ">=3.11"
dependencies = [
    "azure-functions",
    "fastmcp>=3.0",
    "azure-data-tables",
    "azure-identity",
    "starlette",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx",
    "ruff",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"
lint.select = ["E", "F", "I", "UP", "A"]
lint.ignore = ["D203"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
